Bug 266787 - LegacyCustomProtocolManager is incorrectly using the NetworkProcess object off the main thread
Summary: LegacyCustomProtocolManager is incorrectly using the NetworkProcess object of...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit2 (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Chris Dumez
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-12-21 13:42 PST by Chris Dumez
Modified: 2023-12-21 16:22 PST (History)
3 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Dumez 2023-12-21 13:42:03 PST
LegacyCustomProtocolManager is incorrectly using the NetworkProcess object off the main thread. NetworkProcess is only safe to use on the main thread.
Found this the hardware when I tried adding a threading assertion in 272402@main.
Comment 1 Chris Dumez 2023-12-21 13:43:50 PST
Pull request: https://github.com/WebKit/WebKit/pull/22175
Comment 2 EWS 2023-12-21 16:21:16 PST
Committed 272437@main (ca9aa80579f0): <https://commits.webkit.org/272437@main>

Reviewed commits have been landed. Closing PR #22175 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2023-12-21 16:22:14 PST
<rdar://problem/120017485>