LegacyCustomProtocolManager is incorrectly using the NetworkProcess object off the main thread https://bugs.webkit.org/show_bug.cgi?id=266787

Reviewed by Alex Christensen.

LegacyCustomProtocolManager is incorrectly using the NetworkProcess object off the
main thread. NetworkProcess is only safe to use on the main thread.

Found this the hardware when I tried adding a threading assertion in 272402@main.

This patch fixes the bug and re-lands the threading assertion.

* Source/WebKit/NetworkProcess/CustomProtocols/Cocoa/LegacyCustomProtocolManagerCocoa.mm:
(-[WKCustomProtocol startLoading]):
(-[WKCustomProtocol stopLoading]):
* Source/WebKit/NetworkProcess/CustomProtocols/LegacyCustomProtocolManager.cpp:
(WebKit::LegacyCustomProtocolManager::protectedNetworkProcess const):

Canonical link: https://commits.webkit.org/272437@main